# xspline

./: .buildinfo  .gitignore  .travis.yaml  .travis.yml  CODE_OF_CONDUCT.rst  LICENSE  Makefile  README.md  README.rst  genindex.html  index.html  installation.html  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.py
_modules/: index.html
_sources/: index.rst.txt  installation.rst.txt  quickstart.rst.txt
api_reference/: index.html  xspline.bspl.html  xspline.indi.html  xspline.poly.html  xspline.xfunction.html  xspline.xspl.html
bspline/: bspline.py  lbspline.py
docs/: conf.py  installation.rst  quickstart.rst
example/: example_get_started.ipynb
pybs/: __init__.py  bs_class.py
src/: bspy.py
test/: bspline_designDMat.py  bspline_designIMat.py  bspline_designMat.py  bspline_integrate.py  bspline_lastDMat.py  bspline_splineDF.py  bspline_splineF.py  bspline_splineIF.py  bspline_splineS.py  check_bspline.py  check_lbspline.py  lbspline_designDMat.py  lbspline_designIMat.py  lbspline_designMat.py  lbspline_integrate.py  lbspline_intgLinear.py  lbspline_lastDMat.py  lbspline_splineDF.py  lbspline_splineF.py  lbspline_splineIF.py  test_splineDF.py  test_splineF.py
tests/: bspline_designDMat.py  bspline_designIMat.py  bspline_designMat.py  bspline_integrate.py  bspline_lastDMat.py  bspline_splineDF.py  bspline_splineF.py  bspline_splineIF.py  bspline_splineS.py  check_bspline.py  check_utils.py  check_xspline.py  test_basis.py  test_basis_xfunction.py  test_boundarynumber.py  test_bspl.py  (+26 more)
(+43 files in other folders)
